--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Rock, Paper, Scissors</h1>
-    <p id="the result"></p>
-    <p id="computer choice"></p>
+    <div class="main">
+        <div class="game">
+            <h1>Rock, Paper, Scissors</h1>
+            <div class="resultsofGame">
+                <p id="user choice"></p>
+                <p class="compChoice" id="computer choice"></p>
+                <p class="result" id="the result"></p>
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
