minor changes, score keeping

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <div class="main">
         <div class="game">
             <h1>Rock, Paper, Scissors</h1>
+            <h4 class="versus" id="versus"></h4>
             <div class="resultsofGame">
-                <h3 class="versus" id="versus"></h3>
+                
                 <p id="user choice"></p>
                 <p class="compChoice" id="computer choice"></p>
+                <p class="result" id="player-score"></p>
                 <p class="result" id="the result"></p>
             </div>
 
